# fifa26_predictor

./: .gitignore  LICENSE  README.md  backtest_last_year_results.csv  exploration.ipynb  main.py  montecarlo_group_distribution.csv  predicted_group_stage_matches_deterministic.csv  predicted_group_stage_matches_stochastic.csv  predicted_quarter-final.csv  predicted_round_of_16.csv  predicted_round_of_32.csv  predicted_semi-final.csv  pyproject.toml  untitled:planPredictGroupStage.prompt.md
data/: rankings.json  worldcup.json
tests/: test_export_match_predictions.py  test_worldcup_backtest.py
